--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
 
     <!-- Additional Services (centered bottom) -->
     <div class="service-item last-center">
-      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Additional%20Services.png" alt="Additional Services">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Additional%20Services.PNG" alt="Additional Services">
       <div class="service-description">
         <h3>Additional Services</h3>
         <p>Covers a wide range of construction-related support beyond the listed categories—tailored solutions for unique project needs.</p>
