--- a/index.html
+++ b/index.html
@@ -502,26 +502,28 @@
   </style>
 </head>
 <body>
-  <header>
-    <div class="logo-container">
-      <img class="logo" src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/LOGO_Edited.name2.jpg" alt="Resolution Tech Constructions Logo"/>
-    </div>
-    <div class="header-center">
-      <nav>
-        <a href="#services">Services</a>
-        <a href="#advantage">AI Advantage</a>
-        <a href="#contact">Contact</a>
-       <a href="#about">About us</a>
-        <a href="#locations">Our Locations</a>
-      </nav>
-    </div>
-    <div class="header-right">
-      <button class="search-icon" title="Search">
-        <i class="fas fa-search"></i>
-      </button>
-      <button class="request-button">Request a Proposal</button>
-    </div>
-  </header>
+<header>
+  <div class="logo-container">
+    <img class="logo" src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/LOGO_Edited.name2.jpg" alt="Resolution Tech Constructions Logo"/>
+  </div>
+
+  <div class="header-center">
+    <nav>
+      <a href="#advantage">AI Advantage</a>
+      <a href="#services">Our Services</a>
+      <a href="#about">About us</a>
+      <a href="#locations">Our Locations</a>
+      <a href="#contact" class="request-button">Request a Proposal</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </div>
+
+  <div class="header-right">
+    <button class="search-icon" title="Search" aria-label="Search">
+      <i class="fas fa-search"></i>
+    </button>
+  </div>
+</header>
 <section class="video-section">
   <video autoplay muted loop playsinline preload="auto" class="background-video">
     <source src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/video/Resolutiontechmainvideop.mp4" type="video/mp4">
